# RU-app

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  mock1.json  pyproject.toml  server.py  testexao.py
config/: .env
mqtt-service/: mqtt.py  mqtt_client.py  teste.py  teste2.py
repositories/: userRepository.py
schemas/: ru_model.py  user.py
schemas/mongoengine/: __init__.py  ru_model.py
schemas/pydantic/: ru_model_pydantic.py
src/: Drive_a_16x2_LCD_with_the_Raspberry_Pi.py  _test.py  database.py  main.py  mainrasp.py  raspberry.py  teste_servo.py
src/infra/mongoengine/: mongoengine.py
src/infra/mongoengine/ru/: ru_model.py
src/infra/repositories/: user_repository.py
src/mqtt_service/: message_handler.py  mqtt.py  mqtt_client.py  teste2.py
src/pi-rfid/: read.py
src/ui/http/: __init__.py  app.py  router.py
